--- a/client/src/components/Modal.css
+++ b/client/src/components/Modal.css
@@ -2,6 +2,8 @@
     font-family: NeueHelveticaBQ-Bold;
     src: url("../fonts/NeueHelveticaBQ-Bold.otf") format("opentype");
 }
+
+
 .modalBackground {
     width: 100%;
     height: 100%;
@@ -29,6 +31,7 @@
     text-align: center;
     margin-top: -20px;
     font-family: NeueHelveticaBQ-Bold;
+    color: black;
   }
   
   .rules {
@@ -38,7 +41,9 @@
   h4{
     font-family: Arial, Helvetica, sans-serif;
     font-size: 15px;
+    color: black;
   }
+
   
   .close {
     align-self: center;
